#VERSION 0.9.0#

 - added method query() to Peak_Model_Zendatable

 - fixed methods render() and output() in Peak_Render_VirtualLayouts due to recent change in Peak_View_Render

 - fixed Vendors path name in autoload.php

 - added constant PHP_CLOSE_TAG to Peak_Codegen

 - passed method generate() to abstract method in Peak_Codegen
 
 - moved method getIndent() from Peak_Codegen_Class to Peak_Codegen

 - fixed method generate() that was not using $_is_abstract property in Peak_Codegen_Class

 - added property $_is_final and method isFinal() to Peak_Codegen_Class

 - added null default value to param $path of method Peak_View_Render::render()

 - modified method init() from Peak_Core to throw an exception when path(s) or config constants are missing 

 - added new constant to Peak_Exception and updated method handleErrConstToText()

 - updated Zend Framework version 1.11.1 to 1.11.10 in vendors folder

 - updated geshi version and deleted old php folder in vendors folder

 - renamed libs folder to vendors, changed set_include_path in Peak_Core accordingly

 - fixed method Peak_Config_Json::_jsonError(), JSON_ERROR_UTF8 constant don't exists until php 5.3.3

 - added abstract method render() and output() to Peak_View_Render

 - deleted deprecated file boot.php. Use Peak_Core::init() instead


#VERSION 0.8.7#

 - udpated method matchRegex() from Peak_Router to accept regex named subpatterns as controller params
 
 - modified token separator from '.' to more natural '/' char in Peak_Router::addRegex()

 - added method redirectUrl() in Peak_Controller_Action

 - added method renderwithjQueryTag() to class View_Helper_js

 - added class Peak_Controller_Helper_Request

 - fixed method redirect() of Peak_Controller_Front to support an non-array $params

 - fixed method getTitle() in Peak_Controller_Action for Peak internal controller classes

 - deprecated boot.php

 - patched regression problem with recent changes of Peak_View::__get() and Peak_Config::__get()
