@@ -1,5 +1,9 @@
 #VERSION 0.9.0#
 
+ - fixed method paramsToArray() from Peak_Zreflection
+
+ - added methods getMethods(), getProperties() and getConstants() to Peak_Zreflection
+
  - added method query() to Peak_Model_Zendatable
 
  - fixed methods render() and output() in Peak_Render_VirtualLayouts due to recent change in Peak_View_Render
